--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Civilization -- History'
 - !lcsh 'Civil society -- History'
 - !lcc 'CB'
+- GITenberg
 title: An Essay on the History of Civil Society, Eighth Edition
 url: http://www.gutenberg.org/ebooks/8646
